# m_bazel_test

./: .gitignore  WORKSPACE.bazel  go.mod  package.json
.github/workflows/: main.yml
my-python-app/: BUILD.bazel  main.py
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/node_calculator/: calculator.js
projects/node_web/: calculator.spec.js
projects/projectb/: BUILD.bazel
