load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.5.0/rules_python-0.5.0.tar.gz",
    sha256 = "cd6730ed53a002c56ce4e2f396ba3b3be262fd7cb68339f0377a45e8227fe332",
)

load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "python_deps",
    requirements = "//third_party:requirements.txt",
)











# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "rules_python",
#     sha256 = "94750828b18044533e98a129003b6a68001204038dc4749f40b195b24c38f49f",
#     strip_prefix = "rules_python-0.21.0",
#     url = "https://github.com/bazelbuild/rules_python/releases/download/0.21.0/rules_python-0.21.0.tar.gz",
# )

# load("@rules_python//python:repositories.bzl", "py_repositories")

# py_repositories()

# load("@rules_python//python:pip.bzl", "pip_parse")

# # Create a central repo that knows about the dependencies needed from
# # requirements_lock.txt.
# pip_parse(
#    name = "python_deps",
#    requirements_lock = "//third_party:requirements.txt",
# )
# # # Load the starlark macro which will define your dependencies.
# # load("@my_deps//:requirements.bzl", "install_deps")
# # # Call it to define repos for your requirements.
# # install_deps()


# # requirements_lock = "//third_party:requirements.txt",