py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    visibility = ["//visibility:public"],
    # visibility = ["//visibility:public"] -> this means that it is visible to everything in the package
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [
        "//projects/calculator:calculator"
    ],
)